--- a/photogram/src/main/resources/application.yml
+++ b/photogram/src/main/resources/application.yml
@@ -5,19 +5,19 @@ server:
     encoding:
       charset: utf-8
       enabled: true
-    
+
 spring:
   mvc:
     view:
       prefix: /WEB-INF/views/
       suffix: .jsp
-      
+
   datasource:
-    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://localhost:3306/photogram?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
-    username: cos
-    password: cos1234
-    
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/photogram?serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true&useSSL=false
+    username: root
+    password: 1234
+
   jpa:
     open-in-view: true
     hibernate:
@@ -25,7 +25,7 @@ spring:
       naming:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
     show-sql: true
-      
+
   servlet:
     multipart:
       enabled: true
@@ -34,7 +34,7 @@ spring:
   security:
     user:
       name: test
-      password: 1234   
+      password: 1234
 
 #file:
 #  path: C:/workspace/springbootwork/upload/
